cart view load final with map api

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">FoodOrdering</string>
+    <string name="map_key" translatable="false">AIzaSyClpJvgQqe6sXNP9PLo9CLDEYuURU47APc</string>
 </resources>
