--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
-    <string name="app_name">FoodOrdering</string>
+    <string name="app_name">Menu\'s Food Ordering</string>
     <string name="map_key" translatable="false">AIzaSyClpJvgQqe6sXNP9PLo9CLDEYuURU47APc</string>
 </resources>
